workshop04/wordpress-db.yaml
# Create persistent volume claim
---
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: wpdb-deploy
  namespace: wpns
  labels:
    name: wpdb-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: wpdb-po
  template: 
    metadata:
      name: wpdb-po
      namespace: wpns
      labels:
        name: wpdb-po
    spec:
      volumes:
        - name: wpdb-vol
          persistentVolumeClaim:
            claimName: wp-db-pvc
      containers:
      - name: wpdb
        image: mysql:5.7
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
        volumeMounts:
          - name: wpdb-vol
            mountPath: /var/lib/mysql
            subPath: mysql
# Create service for DB
---
apiVersion: v1
kind: Service
metadata: 
  name: wpdb-svc
  namespace: wpns
  labels:
    name: wpdb-svc
spec:
  type: ClusterIP
  selector:
    name: wpdb-po
  ports:
    - port: 3306
      targetPort: 3306
