workshop04/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: wpns
  labels:
    name: deny-all
spec:
  podSelector: 
    matchLabels:
      name: wpdb-po
  policyTypes:
  - Ingress
  - Egress
# allow app pods to access DB
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql
  namespace: wpns
  labels:
    name: mysql
spec:
  podSelector:
    matchLabels:
      name: wpdb-po
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: wpapp-po 
    ports:
    - port: 3306
